# aan

./: main.py  pyproject.toml
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/cubicy/: MainActivity.java
github/workflows/: build.yml
